kubernetes/bankapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
  namespace: bankapp-namespace
  labels:
    app: bankapp
spec:
  type: NodePort
  selector:
    app: bankapp-deploy
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    NodePort: 30036
