kubernetes/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: bankapp-namespace
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
    Protocol: TCP
