kubernetes/bankapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankapp-ingress
  namespace: bankapp-namespace
spec:
  tls:   #if you want to add cert-issuer and run into https
  - hosts:
    - bankapp.sagardevops.xyz
    secretName: bankapp-tls-secret
  ingressClassName: nginx
  rules:
  - host: bankapp.sagardevops.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bankapp-service
            port: 
              number: 8080
      - pathType: Prefix
        path: /nginx
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
